<resources>
    <string name="app_name">Within Your Means</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_category">Add Category</string>
    <string name="add_button_text">Add</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_description">Date</string>
    <string name="lbl_category">Category</string>

    <string name="error_amount">You have to specify the amount</string>
    <string name="error_name">You have to specify a name</string>
    <string name="error_database">Unexpected error with the database</string>
    <string name="date_text">Tap here to change date from today</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_icon">Icon</string>
    <string name="snack_bar_text">Expense deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="save_button_text">Save</string>
    <string name="budget_text">Set monthly budget</string>

    <string-array name="category">
        <item>Food</item>
        <item>Unhealthy Food</item>
        <item>Alcohol</item>
        <item>Smoking</item>
        <item>Entertainment</item>
        <item>Bill</item>
        <item>Rent</item>
        <item>Clothing</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_expenses">Expenses</string>
    <string name="action_categories">Categories</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="add_category_title">Add Category</string>
    <string name="add_expense_title">Add Expense</string>
</resources>
