<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_amount"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                />

            <EditText
                android:id="@+id/amount_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_below="@id/lbl_amount"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:layout_below="@id/amount_textview"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                />

            <EditText
                android:id="@+id/name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_below="@id/lbl_name"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/lbl_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description"
                android:layout_below="@id/name_textview"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                />

            <EditText
                android:id="@+id/desc_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_below="@id/lbl_desc"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/lbl_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_category"
                android:layout_below="@id/desc_textview"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_below="@id/lbl_category"
                android:layout_marginTop="10dp"
                 />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button_text"
                android:layout_below="@id/spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>