<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/add_category"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_color"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_color"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    />

                <TextView
                    android:id="@+id/lbl_icon"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_icon"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    />

                <ImageView
                    android:id="@+id/color_imageView"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/darker_gray"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    />

                <ImageView
                    android:id="@+id/icon_imageView"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    />

            </GridLayout>

            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:layout_below="@id/grid"
                android:layout_marginTop="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                />

            <EditText
                android:id="@+id/name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_name"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button_text"
                android:layout_below="@id/name_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>